JSW Devsb/src/objects/Day_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Areas_Covered__c</fullName>
        <label>Areas Covered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Partners__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depots__c</fullName>
        <label>Depots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influencers__c</fullName>
        <label>Influencers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <label>Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Month Plan</label>
        <referenceTo>Month_Plan__c</referenceTo>
        <relationshipLabel>Day Plan</relationshipLabel>
        <relationshipName>Day_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_planned_visits__c</fullName>
        <label>Number of planned visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_visits__c</fullName>
        <label>Number of visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PJP_Status__c</fullName>
        <formula>IF(ISPICKVAL(Month_Plan__r.Status__c, &apos;New Request&apos;),&apos;New Request&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Month_Plan__r.Status__c, &apos;Pending&apos;),&apos;Pending&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Month_Plan__r.Status__c, &apos;Submitted&apos;),&apos;Submitted&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Month_Plan__r.Status__c, &apos;Approved&apos;),&apos;Approved&apos;,&apos;&apos;)+ 
IF(ISPICKVAL(Month_Plan__r.Status__c, &apos;Rejected&apos;),&apos;Rejected &apos;,&apos;&apos;)</formula>
        <label>PJP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_Name__c</fullName>
        <label>Route Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <label>Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Day_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Week Plan</label>
        <referenceTo>Week_Plan__c</referenceTo>
        <relationshipLabel>Day Plan</relationshipLabel>
        <relationshipName>Day_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Working_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <picklist>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Day Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Month_Plan__c</columns>
        <columns>Week_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Day Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Day Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>